documentation: login swagger
